# monsia3

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
data/: Makefile  Makefile.am  Makefile.in  monsia3.desktop  monsia3.desktop.in  monsia3.desktop.in.in
data/icons/: Makefile  Makefile.am  Makefile.in
data/icons/hicolor/: Makefile  Makefile.in
data/icons/hicolor/16x16/: Makefile  Makefile.in
data/icons/hicolor/16x16/apps/: Makefile  Makefile.am  Makefile.in
data/icons/hicolor/22x22/: Makefile  Makefile.in
data/icons/hicolor/22x22/apps/: Makefile  Makefile.am  Makefile.in
data/icons/hicolor/24x24/: Makefile  Makefile.in
data/icons/hicolor/24x24/apps/: Makefile  Makefile.am  Makefile.in
data/icons/hicolor/32x32/: Makefile  Makefile.in
data/icons/hicolor/32x32/apps/: Makefile  Makefile.am  Makefile.in
data/icons/hicolor/48x48/: Makefile  Makefile.in
data/icons/hicolor/48x48/apps/: Makefile  Makefile.am  Makefile.in
data/icons/hicolor/scalable/: Makefile  Makefile.in
data/icons/hicolor/scalable/apps/: Makefile  Makefile.am  Makefile.in
doc/: Makefile.in  version.xml
doc/html/: GladeApp.html  GladeClipboard.html  GladeClipboardView.html  GladeCommand.html  GladeEditor.html  GladeEditorProperty.html  GladeFixed.html  GladeInspector.html  GladePalette.html  GladePlaceholder.html  GladeProject.html  GladeWidget.html  catalog.html  catalogintro.html  children.html  core.html  dockables.html  gladeui-GladeBaseEditor.html  gladeui-GladePropertyClass.html  gladeui-GladeWidgetAdaptor.html  gladeui-glade-parameter.html  gladeui-glade-property.html  gladeui-glade-signal-editor.html  gladeui-glade-utils.html  gladeui.devhelp  gladeui.devhelp2  index.html  index.sgml  ix01.html  misc.html  properties.html  widgetclasses.html
doc/xml/: glade-app.xml  glade-base-editor.xml  glade-clipboard-view.xml  glade-clipboard.xml  glade-command.xml  glade-design-layout.xml  glade-design-view.xml  glade-editor-property.xml  glade-editor.xml  glade-fixed.xml  glade-inspector.xml  glade-palette.xml  glade-parameter.xml  glade-parser.xml  glade-placeholder.xml  glade-project.xml  glade-property-class.xml  glade-property.xml  glade-signal-editor.xml  glade-signal.xml  glade-utils.xml  glade-widget-action.xml  glade-widget-adaptor.xml  glade-widget.xml
gladeui/: Makefile.am  Makefile.in  glade-fixed.c  glade-marshallers.c  glade-marshallers.h  glade-parser.c  glade-parser.h  glade-property-save-list.txt  glade-property.c  glade-signal.c  glade-widget.c  glade.h
help/: Makefile.in
help/it/: glade.xml
plugins/: Makefile.am  Makefile.in
plugins/gnome/: Makefile.in  bonobo.xml  canvas.xml  gnome.xml
plugins/gnome/icons/: Makefile.in
plugins/gnome/icons/16x16/: Makefile.in
plugins/gnome/icons/22x22/: Makefile.in
plugins/gtk+/: Makefile.am  Makefile.in  gtk+.xml  gtk+.xml.in
plugins/gtk+/icons/: Makefile.in
plugins/gtk+/icons/16x16/: Makefile.in
plugins/gtk+/icons/22x22/: Makefile.in
plugins/gtkpanda2/: .glade-gtkpanda2.c.swp  Makefile  Makefile.am  Makefile.in  glade-gtkpanda2.c  gtkpanda2.xml  gtkpanda2.xml.in
plugins/gtkpanda2/.deps/: libgladegtkpanda2_la-glade-gtkpanda2.Plo
plugins/gtkpanda2/.libs/: libgladegtkpanda2.lai  libgladegtkpanda2.soT
plugins/gtkpanda2/icons/: Makefile  Makefile.in
plugins/gtkpanda2/icons/16x16/: Makefile  Makefile.am  Makefile.in
plugins/gtkpanda2/icons/22x22/: Makefile  Makefile.am  Makefile.in
plugins/panda/: .panda.xml.in.swp  Makefile.am  Makefile.in  glade-panda.c  panda.xml.in
plugins/panda/icons/: Makefile.in
plugins/panda/icons/16x16/: Makefile.am  Makefile.in
plugins/panda/icons/22x22/: Makefile.am  Makefile.in
po/: POTFILES.in  ar.po  az.po  bg.po  bn.po  bn_IN.po  ca.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  et.po  fi.po  fr.po  gl.po  he.po  hi.po  hu.po  it.po  ja.po  ko.po  lt.po  mk.po  ml.po  monsia3.pot  ms.po  nb.po  nn.po  oc.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sk.po  sl.po  (+11 more)
src/: Makefile.am  Makefile.in  glade-window.c  main.c
