## Process this file with automake to produce Makefile.in

iconsdir = $(pkgdatadir)/pixmaps/hicolor/16x16/actions

icons_DATA = \
        widget-panda-numberentry.png \
        widget-panda-pandaclist.png \
        widget-panda-pandacombo.png \
        widget-panda-pandadownload.png \
        widget-panda-pandaentry.png \
        widget-panda-pandafileentry.png \
        widget-panda-pandahtml.png \
        widget-panda-pandapdf.png \
        widget-panda-pandaprint.png \
        widget-panda-pandatext.png \
        widget-panda-pandatimer.png \
        widget-panda-pixmap.png	\
		widget-panda-window.png

EXTRA_DIST = $(icons_DATA)
